crates/parser/tests/cases/snapshots/cases__errors__use_bad_name.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(use_bad_name), module::parse_use, \"use x as 123\")"

---
error: failed to parse `use` tree
  ┌─ use_bad_name:1:10
  │
1 │ use x as 123
  │          ^^^ expected a name, found a number


